# iPhone-Media-Sync

./: .gitignore  CLAUDE.md  README.md  RELEASE_NOTES.md  build.bat  iphone-media-sync.spec  launcher.py  pyproject.toml  requirements.txt
.claude/hooks/: session-start.sh
.github/workflows/: build-windows.yml  release.yml  test.yml
assets/: README.md
installer/: iphone-media-sync.iss
src/iphone_media_sync/: __init__.py  __main__.py
src/iphone_media_sync/core/: __init__.py  backup.py  classify.py  config.py  dedupe.py  estimate.py  index.py  live_photos.py  manifest.py  metadata.py  ocr.py  quarantine.py  scan_cache.py  storage.py  updates.py  video.py
src/iphone_media_sync/device/: __init__.py  afc_client.py  detector.py  diagnostics.py  models.py
src/iphone_media_sync/ui/: backup_tab.py  cleanup_tab.py  duplicates_tab.py  filter_bar.py  main_window.py  overview_tab.py  preview_dialog.py  probably_delete_tab.py  quarantine_dialog.py  resources.py  settings_dialog.py  theme.py  thumbnail_grid.py  workers.py
tests/: test_core.py
