[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iphone-media-sync"
version = "1.2.3"
description = "Detect, back up, dedupe, and clean up iPhone photos and videos on Windows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymobiledevice3>=7.0.0,<8",
    "pywin32>=306; sys_platform == 'win32'",
    "PySide6>=6.6.0",
    "Pillow>=10.0.0",
    "pillow-heif>=0.15.0",
    "ImageHash>=4.3.1",
]

[project.scripts]
iphone-media-sync = "iphone_media_sync.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
